test/errors/type/str/tobool.yasl
mt.lookup('', .tobool)(1)
